# ttplayer-cpp

./: CMakeLists.txt  CMakePresets.json  README.md  _rebuild.bat  _run_with_log.bat  build.bat  compile_err.txt  debug_log.txt  open_in_qtcreator.bat  play_list.txt  resources.qrc  run_ttplayer.bat  test_app.bat  test_spectrum.bat
src/: _kiss_fft_guts.h  audioplayer.cpp  audioplayer.h  fadinglabel.cpp  fadinglabel.h  fft.h  imageslider.cpp  imageslider.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h  main.cpp  mainwindow.cpp  mainwindow.cpp.modified  mainwindow.h  mp3decoder.cpp  mp3decoder.h  playlist.cpp  playlist.h  skinengine.cpp  skinengine.h  skinparser.cpp  skinparser.h  spectrumbars.cpp  spectrumbars.h
tools/skinsparser/: CMakeLists.txt  README.md  main.cpp  skinparser.cpp  skinparser.h
【千千静听 Skin】皮肤 ★/1 怀旧+/: 1、经典皮肤 (淡蓝+黑绿).skn  6、静 (蓝+灰).skn  7、简单蓝 (蓝白+灰).skn  9、WinXp_Silver (灰白银).skn
【千千静听 Skin】皮肤 ★/2 简约++/: 03、Let's Vista (橄榄绿).skn  04、梦. 午夜 (浅紫).skn  05、生命之光 (春意绿).skn  05、祈福之心 (桃红).skn  06、Simple Gloss_black (黑白灰).skn  06、Simple Gloss_blue (蓝+黑灰).skn  06、Simple Gloss_green (绿+黑灰).skn  06、Simple Gloss_orange (橙+黑灰).skn  07、Milk2.skn
【千千静听 Skin】皮肤 ★/3 时尚+/: 11、卡带 classical (红灰+黑白).skn  2、Right hand（藏青+青绿）.skn  4、LAOUT-裸_随身听 (绿电路板).skn  5、黑_随身听 (白+黑灰).skn  6、iTunes neos_随身听 (深灰).skn
【千千静听 Skin】皮肤 ★/4 其它-/: AREI酷炫LCD (蓝精灵).skn  Prewar (亮蓝+黑).skn  TMB(Tahoma_玫瑰).skn  TMB(Tahoma_绿).skn  TMB(Tahoma_蓝).skn  TMB(Tahoma_青).skn  TMB(Tahoma_黄).skn  开心向前冲.skn
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/1 怀旧+/: 4、HiFi 3.1.skn  5、Windows Classical (黑白灰).skn  8、XP蓝 (蓝绿+灰).skn
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/1 怀旧+/1、经典皮肤 (淡蓝+黑绿) - 副本/: Lyric.xml  PlayList.xml  Skin.xml
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/1 怀旧+/2、Media Player 10 (浅蓝+黑绿) - 副本/: Skin.xml
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/2 简约++/: 02、iBlue (淡蓝+黑格).skn  06、Simple Gloss_purple (紫+黑灰).skn  07、Milk2-黑色版.skn  10、清萍侠客 (橙黄+黑灰).skn  13、▲HeavyMetal (简铜色).skn  14、Auto (淡灰+蓝绿).skn  14、Mac TT 2009 (简灰色).skn
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/3 时尚+/: 10、我的千千我的家 (音响+窗台).skn  11、★JBMAKE★磁带机（蓝白+黑灰）.skn  1、Silence_随身听 (蓝绿+灰蓝).skn  6、iTunes metal_随身听 (浅灰).skn  7、极限能源 (亮蓝+深紫).skn  8、N1.4华傲 (亮蓝+黑).skn  9、Design Music (木色手绘).skn  9、重回至爱-柔和乐符 (木色纸质).skn
【千千静听 Skin】皮肤 ★/【千千静听 Skin】皮肤 ★/4 其它-/: AIPOTU 4 - Sun (橙黄+黑).skn  AREI酷炫LCD (春意绿).skn  GizAmp (墨绿+黑灰).skn  Luminescence (亮蓝+黑白灰).skn  TMB(Tahoma_橙).skn  TMB(Tahoma_紫).skn  TMB(Tahoma_红).skn  TMB(Tahoma_蓝紫).skn  TMB(Tahoma_蓝绿).skn  开心大不同.skn  开心每一天.skn
